# advent-of-code-2021

./: README.md
clojure/: .gitignore  README.md  deps.edn
clojure/src/: hello_santa.clj
erlang/: .gitattributes  .gitignore  README.md
erlang/day1/: day1-advanced.erl  day1.erl
erlang/day2/: day2.erl  day2pt2.erl
erlang/helloworld/: Makefile  relx.config
erlang/helloworld/config/: vm.args
erlang/helloworld/ebin/: helloworld.app
erlang/helloworld/src/: helloworld_app.erl  helloworld_sup.erl
julia/: 01.jl  02.jl  03.jl  README.md
ocaml/: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  advent-of-code-2021.opam  dune-project
ocaml/.vim/: coc-settings.json
ocaml/lib/: day1.ml  day2.ml  day3.ml  day3.mli  day4.ml  day5.ml  day6.ml  day7.ml  dune  greeter.ml  util.ml
ocaml/test/: day1.ml  day2.ml  dune  run_test.ml
rescript/: .gitattributes  .gitignore  README.md  bsconfig.json  package.json
rescript/src/: day1.bs.js  day1.res  hello.bs.js  hello.res
